# jython-to-python3-migrator

./: .gitattributes  .gitignore  .mcp.json.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  opencode.json  pyproject.toml  re
.cursor/: mcp.json
.cursor/rules/: migrate-release-template.mdc
.github/prompts/: migrate-release-template.prompt.md
.github/workflows/: ci.yml  python-test.yml
.opencode/command/: migrate-release-template.md
docs/: ADDING_A_RULE.md  AGENT-WORKFLOW.md  DEVELOPMENT.md  JYTHON-TO-PYTHON3-MIGRATION.md  MCP-INTEGRATION.md  MIGRATION-RULES.md  examples-report.html  examples-report.json  examples.md
examples/jython/: 01_reserved_objects.py  02_python2_syntax.py  03_release_orchestration.py  04_release_report.py  05_release_variables.py  06_variable_edge_cases.py  07_http_request.py  08_java_interop.py  09_deploy_pipeline.py  current_context.py  deploy.py  http_health_check.py  java_datetime_report.py  orchestrate_release.py  py2_syntax.py  task_cleanup.py  variable_map.py
examples/python3/: 01_reserved_objects.py  02_python2_syntax.py  03_release_orchestration.py  04_release_report.py  05_release_variables.py  06_variable_edge_cases.py  07_http_request.py  08_java_interop.py  09_deploy_pipeline.py  current_context.py  deploy.py  http_health_check.py  java_datetime_report.py  orchestrate_release.py  py2_syntax.py  task_cleanup.py  variable_map.py
examples/templates/: jython_template.yaml  python3_template.yaml
src/jython2py3/: __init__.py  __main__.py  _cst.py  _tasks.py  cli.py  engine.py  yaml_migrate.py
tests/: conftest.py
tests/integration/: conftest.py  server.py  test_example_goldens.py  test_examples.py  test_live_migration.py  test_live_template_migration.py  test_template_yaml.py
tests/unit/: test_cli.py  test_http_request.py  test_java_date.py  test_java_imports.py  test_java_usage.py  test_mcp_cli.py  test_mcp_client.py  test_mcp_migrate.py  test_py2_syntax.py  test_release_var_refs.py  test_release_vars.py  (+2 more)
(+30 files in other folders)
